tests/expression/function_wrong_params.sy
start :: fn {
    f : fn -> int = fn a: int -> int {}
}
// error: $Mismatch{..}
